# SoftwareEngineeringProject

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md
.github/workflows/: Team18_CICD.yml
Team00/Code00/: StartupSPASolution.sln
Team00/Code00/SPA/: QueryParser.cpp  SPA.vcxproj  SPA.vcxproj.filters
Team00/Code00/Tests/: out.xml
Team00/Code00/UnitTesting/: QPSTestingSpecializations.h  TestAST.cpp  TestEntity  TestEntity.cpp  TestPQLTokenizer.cpp  TestQPS.cpp  TestQPSDeclarationParser.cpp  TestQPSSelectionParser.cpp  TestSimpleTokenizer.cpp  UnitTesting.vcxproj  UnitTesting.vcxproj.filters  stdafx.h
Team00/Code00/source/: ASTBuilder.h  ASTNode.h  PKB.cpp  PKB.h  Parser.cpp
Team18/Code18/: StartupSPASolution.sln
Team18/Code18/AutoTester/: AutoTester.vcxproj  AutoTester.vcxproj.filters  CMakeLists.txt
Team18/Code18/AutoTester/source/: AbstractWrapper.h  TestWrapper.cpp  TestWrapper.h
Team18/Code18/GoogleTestUnit/: CMakeLists.txt  GoogleTestUnit.vcxproj  UnitTestMain.cpp
Team18/Code18/IntegrationTesting/: TestFrontEnd.cpp  (+1 more)
Team18/Tests18/: 1_q.txt  Optimisation_queries.txt  Sample_queries1.txt  Sample_queries2.txt  Sample_queries8nov.txt  Sample_queries_random.txt  Sample_queries_random_affects_master.txt  Sample_source1.txt  Sample_source2.txt  Sample_source_random.txt  Sample_source_random_annotated.txt  Stress_queries.txt  Stress_source.txt  affects_queries.txt  affects_source.txt  debug_queries.txt  debug_source.txt  run_query.txt  with_queries.txt  with_source.txt
cmake/: CompilerWarnings.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake
(+619 files in other folders)
